<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_can_contact_me_about_room_listings"
        android:textColor="@color/inSettingDarkblue"
        android:textSize="@dimen/sp_21"
        android:layout_margin="@dimen/dp_10"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyone"
            android:id="@+id/rbSettingEveryone"
            android:button="@drawable/custom_radiobutton_sel_round_background"
            android:textColor="@color/textselector"
            android:layout_margin="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_21"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_matches_with_mutual_friends"
            android:id="@+id/rbSettingOnlyMatches"
            android:button="@drawable/custom_radiobutton_unsel_round_background"
            android:textColor="@color/textselector"
            android:layout_margin="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_21"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nobody_i_want_to_reach_out_first"
            android:id="@+id/rbSettingNobody"
            android:button="@drawable/custom_radiobutton_unsel_round_background"
            android:textColor="@color/textselector"
            android:layout_margin="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_21"
            />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_me"
        android:textColor="@color/inSettingDarkblue"
        android:textSize="@dimen/sp_21"
        android:layout_margin="@dimen/dp_10"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_matches"
        android:paddingLeft="@dimen/dp_10"
        android:id="@+id/rbSettingAllMatches"
        android:button="@drawable/custom_radiobutton_sel_round_background"
        android:textColor="@color/textselector"
        android:layout_margin="@dimen/dp_10"
        android:textSize="@dimen/sp_21"
        />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_matches_with_mutual_friends"
        android:paddingLeft="@dimen/dp_10"
        android:id="@+id/rbSettingShowMeOnlyMatches"
        android:button="@drawable/custom_radiobutton_unsel_round_background"
        android:textColor="@color/textselector"
        android:layout_margin="@dimen/dp_10"
        android:textSize="@dimen/sp_21"
        />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/inSettingDarkblue"
        android:layout_marginLeft="@dimen/dp_42"
        android:layout_marginRight="@dimen/dp_42"
        android:layout_marginTop="@dimen/dp_42"
        android:layout_marginBottom="@dimen/dp_15"
        android:textSize="@dimen/sp_21"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_21"
        android:textColor="@color/settingRed"
        />
</LinearLayout>